--- a/Python first steps, day 2 -- 2022-12Dec-05.ipynb
+++ b/Python first steps, day 2 -- 2022-12Dec-05.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "708a5541",
+   "id": "e074df21",
    "metadata": {},
    "source": [
     "# Agenda: Week 3 (Dictionaries and files)\n",
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5c37e789",
+   "id": "ea2fd596",
    "metadata": {},
    "source": [
     "# Data structures so far\n",
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "de73f8c2",
+   "id": "7aa0ff64",
    "metadata": {},
    "source": [
     "# Getting help in Jupyter\n",
@@ -69,7 +69,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "849a157e",
+   "id": "9cd9278e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -81,7 +81,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "da896b44",
+   "id": "2f1caf36",
    "metadata": {},
    "outputs": [
     {
@@ -240,7 +240,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "001f201b",
+   "id": "b314db15",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -249,7 +249,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "29b18297",
+   "id": "4ef4d037",
    "metadata": {},
    "source": [
     "# Dictionaries (aka \"dicts\")\n",
@@ -276,7 +276,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d227c8eb",
+   "id": "cdb07172",
    "metadata": {},
    "source": [
     "A dict is also known by many other names in other languages:\n",
@@ -303,7 +303,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "0515a447",
+   "id": "b33de9ac",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -320,7 +320,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "c3e193b8",
+   "id": "ecd16f54",
    "metadata": {},
    "outputs": [
     {
@@ -341,7 +341,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "f12ca165",
+   "id": "93c00f5c",
    "metadata": {},
    "outputs": [
     {
@@ -364,7 +364,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "11a1875e",
+   "id": "5721939a",
    "metadata": {},
    "outputs": [
     {
@@ -386,7 +386,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "f25e5f9f",
+   "id": "2881e911",
    "metadata": {},
    "outputs": [
     {
@@ -407,7 +407,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "185e1bf3",
+   "id": "8700fa83",
    "metadata": {},
    "outputs": [
     {
@@ -430,7 +430,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "02da8170",
+   "id": "48669890",
    "metadata": {},
    "outputs": [
     {
@@ -451,7 +451,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "4bcaaab9",
+   "id": "fde5e51d",
    "metadata": {},
    "outputs": [
     {
@@ -472,7 +472,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "1078e2da",
+   "id": "4b2167b9",
    "metadata": {},
    "outputs": [
     {
@@ -493,7 +493,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e22f0bb1",
+   "id": "b7843dd7",
    "metadata": {},
    "source": [
     "# First paradigm for dict use: A read-only database\n",
@@ -506,7 +506,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "4f47cea5",
+   "id": "acf39a94",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -516,7 +516,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "0571cd92",
+   "id": "4bd40d40",
    "metadata": {},
    "outputs": [
     {
@@ -537,7 +537,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "7c57338b",
+   "id": "88293750",
    "metadata": {},
    "outputs": [
     {
@@ -558,7 +558,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "334f127f",
+   "id": "79fbea5d",
    "metadata": {},
    "source": [
     "# Exercise: Restuarant\n",
@@ -583,7 +583,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "35ce38b8",
+   "id": "28a5904f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -596,7 +596,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "2ad6ab33",
+   "id": "70b55292",
    "metadata": {},
    "outputs": [
     {
@@ -617,7 +617,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "bc81a750",
+   "id": "ee348ea1",
    "metadata": {},
    "outputs": [
     {
@@ -638,7 +638,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "3fb4e1f5",
+   "id": "04e00bc5",
    "metadata": {},
    "outputs": [
     {
@@ -660,7 +660,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "bac97349",
+   "id": "36b9beef",
    "metadata": {},
    "outputs": [
     {
@@ -710,7 +710,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "17359432",
+   "id": "a803e852",
    "metadata": {},
    "outputs": [
     {
@@ -732,7 +732,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "e1aa8ac8",
+   "id": "b9186ad7",
    "metadata": {},
    "outputs": [
     {
@@ -752,14 +752,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2b6f02dd",
+   "id": "d2c7343b",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "3dfadec6",
+   "id": "e063df82",
    "metadata": {},
    "source": [
     "\n",
@@ -784,7 +784,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "30a733da",
+   "id": "e3799075",
    "metadata": {},
    "outputs": [
     {
@@ -812,7 +812,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "3acf2347",
+   "id": "baeab8b1",
    "metadata": {},
    "outputs": [
     {
@@ -838,7 +838,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "87f66917",
+   "id": "6e007745",
    "metadata": {},
    "outputs": [
     {
@@ -862,7 +862,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "b88d0862",
+   "id": "4b51aa5d",
    "metadata": {},
    "outputs": [
     {
@@ -882,7 +882,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "555f6ee4",
+   "id": "71288d1c",
    "metadata": {},
    "source": [
     "# Dicts are always key -> value\n",
@@ -897,7 +897,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "93852912",
+   "id": "2692cee3",
    "metadata": {},
    "outputs": [
     {
@@ -917,7 +917,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1250fcf0",
+   "id": "7d917667",
    "metadata": {},
    "source": [
     "# Next up\n",
@@ -928,7 +928,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d06c5047",
+   "id": "53cb5071",
    "metadata": {},
    "source": [
     "# Dicts for accumulation (paradigm 2)\n",
@@ -941,7 +941,7 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "id": "1a75114c",
+   "id": "562add58",
    "metadata": {},
    "outputs": [
     {
@@ -971,7 +971,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8338f7fa",
+   "id": "58a7dd40",
    "metadata": {},
    "source": [
     "# Exercise: Vowels, digits, and others (dict edition)\n",
@@ -988,7 +988,7 @@
   {
    "cell_type": "code",
    "execution_count": 36,
-   "id": "73f7f404",
+   "id": "9f90cf9d",
    "metadata": {},
    "outputs": [
     {
@@ -1022,7 +1022,7 @@
   {
    "cell_type": "code",
    "execution_count": 37,
-   "id": "162b50ab",
+   "id": "57c058c9",
    "metadata": {},
    "outputs": [
     {
@@ -1043,7 +1043,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9a0de490",
+   "id": "366f4e69",
    "metadata": {},
    "source": [
     "# Accumulating the unknown (paradigm 3)\n",
@@ -1058,7 +1058,7 @@
   {
    "cell_type": "code",
    "execution_count": 38,
-   "id": "e3ba47bb",
+   "id": "0c3fd2e0",
    "metadata": {},
    "outputs": [
     {
@@ -1095,7 +1095,7 @@
   {
    "cell_type": "code",
    "execution_count": 39,
-   "id": "63030b96",
+   "id": "3e6fa5f9",
    "metadata": {},
    "outputs": [
     {
@@ -1123,7 +1123,7 @@
   {
    "cell_type": "code",
    "execution_count": 40,
-   "id": "aae081da",
+   "id": "131f26c6",
    "metadata": {},
    "outputs": [
     {
@@ -1159,7 +1159,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "682b6765",
+   "id": "e921dc2c",
    "metadata": {},
    "source": [
     "# Rainfall \n",
@@ -1195,7 +1195,7 @@
   {
    "cell_type": "code",
    "execution_count": 44,
-   "id": "0b16366f",
+   "id": "8bfb52ac",
    "metadata": {},
    "outputs": [
     {
@@ -1238,7 +1238,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "201852a5",
+   "id": "9216ce98",
    "metadata": {},
    "source": [
     "# Next up\n",
@@ -1250,7 +1250,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "32e0f0e6",
+   "id": "24f9bc14",
    "metadata": {},
    "source": [
     "# Looping over dicts\n",
@@ -1267,7 +1267,7 @@
   {
    "cell_type": "code",
    "execution_count": 45,
-   "id": "914f3098",
+   "id": "7d1070f7",
    "metadata": {},
    "outputs": [
     {
@@ -1290,7 +1290,7 @@
   {
    "cell_type": "code",
    "execution_count": 46,
-   "id": "551fdf10",
+   "id": "50dd9dc8",
    "metadata": {},
    "outputs": [
     {
@@ -1313,7 +1313,7 @@
   {
    "cell_type": "code",
    "execution_count": 47,
-   "id": "acdb18c0",
+   "id": "62f41894",
    "metadata": {},
    "outputs": [
     {
@@ -1336,7 +1336,7 @@
   {
    "cell_type": "code",
    "execution_count": 48,
-   "id": "736c3e2a",
+   "id": "a2432c0e",
    "metadata": {},
    "outputs": [
     {
@@ -1360,7 +1360,7 @@
   {
    "cell_type": "code",
    "execution_count": 49,
-   "id": "04238d36",
+   "id": "0fff5428",
    "metadata": {},
    "outputs": [
     {
@@ -1383,7 +1383,7 @@
   {
    "cell_type": "code",
    "execution_count": 50,
-   "id": "c9cd4265",
+   "id": "627eaacf",
    "metadata": {},
    "outputs": [
     {
@@ -1406,7 +1406,7 @@
   {
    "cell_type": "code",
    "execution_count": 51,
-   "id": "bb440a6e",
+   "id": "7a3806c9",
    "metadata": {},
    "outputs": [
     {
@@ -1427,7 +1427,7 @@
   {
    "cell_type": "code",
    "execution_count": 52,
-   "id": "99944bd5",
+   "id": "e6bb2150",
    "metadata": {},
    "outputs": [
     {
@@ -1450,7 +1450,7 @@
   {
    "cell_type": "code",
    "execution_count": 53,
-   "id": "9e533826",
+   "id": "63f51a5b",
    "metadata": {},
    "outputs": [
     {
@@ -1473,7 +1473,7 @@
   {
    "cell_type": "code",
    "execution_count": 54,
-   "id": "cc371a6b",
+   "id": "7a5fe961",
    "metadata": {},
    "outputs": [
     {
@@ -1495,7 +1495,7 @@
   {
    "cell_type": "code",
    "execution_count": 55,
-   "id": "30e2836b",
+   "id": "b08d6033",
    "metadata": {},
    "outputs": [
     {
@@ -1516,7 +1516,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "09e5e8cd",
+   "id": "0ce1b563",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1528,7 +1528,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d8535f7a",
+   "id": "5e57423c",
    "metadata": {},
    "source": [
     "# Exercise: Age statistics\n",
@@ -1540,7 +1540,7 @@
   {
    "cell_type": "code",
    "execution_count": 57,
-   "id": "21c858d3",
+   "id": "408ad544",
    "metadata": {},
    "outputs": [
     {
@@ -1571,7 +1571,7 @@
   {
    "cell_type": "code",
    "execution_count": 58,
-   "id": "018bc52f",
+   "id": "07f1d241",
    "metadata": {},
    "outputs": [
     {
@@ -1598,7 +1598,7 @@
   {
    "cell_type": "code",
    "execution_count": 65,
-   "id": "65c3d97a",
+   "id": "4c0a3553",
    "metadata": {},
    "outputs": [
     {
@@ -1620,7 +1620,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "04a28fc9",
+   "id": "4a885038",
    "metadata": {},
    "source": [
     "# How do dictionaries work?\n",
@@ -1649,7 +1649,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "23f2c5fe",
+   "id": "3dc5a3fe",
    "metadata": {},
    "source": [
     "# Files\n",
@@ -1664,7 +1664,7 @@
   {
    "cell_type": "code",
    "execution_count": 66,
-   "id": "6e5613ea",
+   "id": "a81a860e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1677,7 +1677,7 @@
   {
    "cell_type": "code",
    "execution_count": 67,
-   "id": "2674a962",
+   "id": "5d40b286",
    "metadata": {},
    "outputs": [
     {
@@ -2104,14 +2104,14 @@
     "# the best (in many cases) is to iterate over it, line by line\n",
     "# how? with a for loop!\n",
     "\n",
-    "for one_line in f:\n",
+    "for one_line in f:    # each iteration gives me one line, up to and including the \\n \n",
     "    print(one_line)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "35ad08b9",
+   "id": "0d55345f",
    "metadata": {},
    "outputs": [],
    "source": []
